CI images update

--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-08 13:51:19
+lastsearch = 2024-08-08 15:44:04
 
 [dongagroup.vn]
 match = -272.7%%
@@ -27,9 +27,9 @@ title = Giuonggaphoaphat.com
 url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
-match = -245.5%%
-title = giường liền tủ nhựa cứng ecoplast cao cấp gec31
-url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30-2/
+match = -172.7%%
+title = giường nhựa cứng ecoplast cao cấp gec60
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
 
 [giuongtang.mov.mn]
 match = -200.0%%
@@ -137,14 +137,14 @@ title = Giường gấp 2 khúc - Công ty DAMITA hàn quốc
 url = https://damita.vn/danh-muc-san-pham/giuong-gap/giuong-gap-2-khuc/
 
 [vexere.com]
-match = -345.5%%
-title = Đặt vé xe giường nằm đôi đi Đắk Lắk từ Sài Gòn giá tốt nhất
-url = https://vexere.com/vi-VN/ve-xe-giuong-nam-doi-tu-sai-gon-di-dak-lak-129t1161.html
+match = -309.1%%
+title = Vé xe Giường nằm đôi của 12 nhà xe từ Sài Gòn đi Đà Lạt
+url = https://vexere.com/vi-VN/ve-xe-giuong-nam-doi-tu-sai-gon-di-da-lat-lam-dong-129t23991.html
 
 [bentreriverside.com]
-match = -81.8%%
-title = SUITE Hướng Sông 2 Giường Đơn
-url = https://bentreriverside.com/en/room/suite-huong-song-2-giuong-don/
+match = -290.9%%
+title = SUITE Hướng Phố 2 Giường Đơn - Ben Tre Riverside ...
+url = https://bentreriverside.com/en/room/suite-huong-pho-2-giuong-don/
 
 [thegioigiuonggap.com]
 match = -72.7%%
@@ -152,14 +152,14 @@ title = Giường gấp nhật bản (OTB-MN)
 url = https://thegioigiuonggap.com/giuong-gap-nhat-ban-otb-mn/
 
 [open.spotify.com]
-match = -209.1%%
-title = dat giuong - song and lyrics by Corino Bray
+match = -109.1%%
+title = dat giuong - song by Corino Bray
 url = https://open.spotify.com/track/130RiwgsBhG59d5CsECrLW
 
 [freemeteo.cl]
 match = -281.8%%
 title = Weather Xom Giuong (1) - Long term weather forecast
-url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=10&language=english&country=vietnam
+url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/weekly/?gid=1561485&mn=7&wk=2&language=english&country=vietnam
 
 [giuongbenh.vn]
 match = -163.6%%
@@ -187,9 +187,9 @@ title = Bộ giường ngủ A1 - 1 giường - 2 tab đầu giường
 url = https://vinmus.com/en/bo-giuong-ngu-a1-1-giuong-2-tab-dau-giuong.html
 
 [m.facebook.com]
-match = -272.7%%
-title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
-url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
+match = -190.9%%
+title = Cầu ông thìn bình chánh cần giuong tầng
+url = https://m.facebook.com/groups/124437839572794/posts/782387397111165/
 
 [www.booking.com]
 match = -118.2%%
