--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-08 14:12:03
+lastsearch = 2024-08-08 15:36:00
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -182.4%%
-title = Bông Hoa Đẹp Nhất, Suýt Nữa Thì, Một Đêm Say....| Andiez ...
-url = https://www.youtube.com/watch?v=kESfG4X6QjY
+match = -123.5%%
+title = Như Quỳnh - Xuân Đẹp Làm Sao (Thanh Sơn) PBN 101
+url = https://www.youtube.com/watch?v=QcBvdLl0L1c
 
 [www.gsa.gov]
 match = -44.4%%
@@ -604,7 +604,7 @@ url = https://dienmaycholon.com/kinh-nghiem-mua-sam/cat-toc-ngay-nao-tot-ngay-ca
 [www.bachhoaxanh.com]
 match = -205.9%%
 title = Tổng hợp 18 loại hoa cát tường, thu hút tài lộc trong năm mới
-url = https://www.bachhoaxanh.com/kinh-nghiem-hay/tong-hop-18-loai-hoa-cat-tuong-thu-hut-tai-loc-nen-bay-trong-nha-dip-nam-moi-de-may-man-1318583
+url = https://www.bachhoaxanh.com/kinh-nghiem-hay/tong-hop-18-loai-hoa-cat-tuong-thu-hut-tai-loc-nen-bay-trong-nha-dip-nam-moi-de-may-man-1318583?srsltid=AfmBOoqnNFs2aan2HVDKBn__9lY6Id-iNR2iQ_uAKpMWmVn9wW3LCSLE
 
 [www.facebook.com]
 match = -47.1%%
@@ -660,4 +660,14 @@ url = https://doh.wa.gov/
 match = 0.0%%
 title = 
 url = https://www.experian.com/blogs/ask-experian/how-to-opt-out-of-hoa/
+
+[dulich.laodong.vn]
+match = -158.8%%
+title = Thung lũng hoa mận Mu Náu khoe sắc đẹp mơ màng dịp cận ...
+url = https://dulich.laodong.vn/photo/thung-lung-hoa-man-mu-nau-khoe-sac-dep-mo-mang-dip-can-tet-995770.html
+
+[blog.houze.vn]
+match = -223.5%%
+title = 11 loại hoa chưng trong nhà ngày Tết đẹp, dễ trồng, thu hút tài ...
+url = https://blog.houze.vn/blog/hoa-chung-trong-nha-ngay-tet-dep-de-trong-thu-hut-tai-loc-va-may-man
 
