--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-08 10:44:23
+lastsearch = 2024-08-08 15:36:42
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 4.3%%
-title = Bộ sản phẩm SH_BC23 082
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
+match = 0.0%%
+title = Bộ sản phẩm SH_BC22 061
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-061
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH08
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh08
+match = 26.5%%
+title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
+url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
 
 [shopee.vn]
 match = -2.9%%
@@ -67,9 +67,9 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 2.9%%
-title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
-url = https://songhong.info/chan-ga-goi-bc-04
+match = 5.9%%
+title = Mẫu chăn ga gối cotton 100%% mã mầu BC22-062
+url = https://songhong.info/chan-ga-goi-bc62
 
 [kona.com.vn]
 match = 41.2%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022?srsltid=AfmBOoo5_uNeY4rJjZdKOzmd0hnS3P8Go10_9qfldrkFbr-3BHibfPK8
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
@@ -132,12 +132,22 @@ title = BỘ CHĂN GA GỐI BỐN MÙA EVERON EST-21034 - NEM.VN
 url = https://nem.vn/bo-chan-ga-goi-bon-mua-everon-est-21034
 
 [songhongchinhhang.vn]
-match = 30.3%%
-title = Bộ sản phẩm Sông Hồng SH_BC23 076
-url = https://songhongchinhhang.vn/BASIC-COLLECTION/bo-chan-ga-goi-2023-2024/bo-san-pham-song-hong-sh-bc23-076.html
+match = -26.5%%
+title = Bộ chăn ga gối trẻ em SH_JC22 002 - songhongchinhhang.vn
+url = https://songhongchinhhang.vn/YOUTH-COLLECTION/bo-chan-ga-goi/bo-chan-ga-goi-tre-em-sh-yc22-002.html
 
 [www.lazada.vn]
 match = -17.6%%
 title = Bộ bốn mùa 180x200 EST 20034 (1 ga phủ + 1 Chăn ...
 url = https://www.lazada.vn/products/bo-bon-mua-180x200-est-20034-1-ga-phu-1-chan-bon-mua-200220-2-vo-goi-4565-i1917687199.html
+
+[demxanh.com]
+match = 8.8%%
+title = Chăn ga gối Sông Hồng Basic cotton BC23071
+url = https://demxanh.com/chan-ga-goi-song-hong-basic-cotton-bc23071.html
+
+[ngungon.com]
+match = -26.7%%
+title = Bộ Ga Chun Chần
+url = https://ngungon.com/danh-muc-san-pham/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan/
 
