--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-08 15:00:51
+lastsearch = 2024-08-08 15:45:07
 
 [shopee.vn]
 match = 7.4%%
@@ -19,7 +19,7 @@ url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-k
 [www.lazada.vn]
 match = -44.4%%
 title = Mền Lông Tuyết Thái Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/men-long-tuyet-thai/
+url = https://www.lazada.vn/tag/men-long-tuyet-thai/?srsltid=AfmBOoqNAc5v70v2t--LFSDVgzMFwJuLL7O1XJE3-x2m4CYhZNJ2gMFf
 
 [tiki.vn]
 match = 11.1%%
@@ -159,7 +159,7 @@ url = https://www.sendo.vn/men-long-tuyet.htm
 [www.bebong.vn]
 match = 36.4%%
 title = Chăn lông tuyết cho bé
-url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
+url = https://www.bebong.vn/products/chan-long-tuyet-cho-be?srsltid=AfmBOoq8NK50iWpaTGppV6vdMpRwt7Zy5UHrmvRiPGOM3yavfsLfQyDU
 
 [demxanh.com]
 match = -18.5%%
@@ -174,7 +174,7 @@ url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOooIZtghMYh_X4p6QueyYHrbbdoaMKjnYKZDZng5wQCezDKDCkFq
 
 [tuoitre.vn]
 match = -59.3%%
