--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-08 14:36:11
+lastsearch = 2024-08-08 15:39:30
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -129.4%%
-title = Mesenchymal Stem Cell Therapy in Kidney Diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10074620/
+match = -223.5%%
+title = Translational strategies for neuroprotection in ischemic stroke
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
 match = -200.0%%
 title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v3y48Ff&sig=ACfU3U2se3u8HTEGPJ-_ufUbDBVcai03jA&hl=en&sa=X&ved=2ahUKEwiS9eOF4OSHAxWiFFkFHWsTAfEQ6AF6BAgYEAM
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v4p32Ie&sig=ACfU3U2qHYRVm7vqpVNLirvIzltefkzOTA&hl=en&sa=X&ved=2ahUKEwjRr_e4_-SHAxXRFFkFHV69LrsQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
