--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-08 12:17:26
+lastsearch = 2024-08-08 15:48:56
 
 [hoa18.com]
 match = -126.3%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -121.1%%
-title = Nhang nở hoa - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/nhang/nở hoa
+match = -84.2%%
+title = cây phú quý giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=cây phú quý
 
 [baobinhdinh.vn]
 match = -110.5%%
@@ -335,4 +335,9 @@ url = https://cuongduyen.vn/binh-hoa-18-ngu-sac-kim-ke-phu-quy-p-881
 match = -110.5%%
 title = Câu chuyện văn hóa 18/5/2024 | Chiếu phim lưu động
 url = https://www.brt.vn/cau-chuyen-van-hoa/cau-chuyen-van-hoa-1852024-chieu-phim-luu-dong-gan-ket-hoc-sinh-voi-lich-su
+
+[vietnamese.korea.net]
+match = -5.3%%
+title = Di sản UNESCO ở Hàn Quốc
+url = https://vietnamese.korea.net/AboutKorea/Culture-and-the-Arts/UNESCO-Treasures-in-Korea
 
