--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-08 14:54:18
+lastsearch = 2024-08-08 15:38:05
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+match = -131.2%%
+title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
+url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -37,9 +37,9 @@ title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận
 url = https://www.vinmec.com/vie/bai-viet/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc-vi/
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -200.0%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [thongtindoingoai.caobang.gov.vn]
 match = -212.5%%
@@ -432,9 +432,9 @@ title = Đi xe đạp ngược chiều trên cao tốc, 1 cậu bé đi lạc đ
 url = https://suckhoedoisong.vn/di-xe-dap-nguoc-chieu-tren-cao-toc-1-cau-be-di-lac-duoc-csgt-ho-tro-169240621123917145.htm
 
 [www.cgv.vn]
-match = 6.2%%
-title = CGV Buôn Mê Thuột
-url = https://www.cgv.vn/default/cinox/site/cgv-buon-me-thuot
+match = 0.0%%
+title = CGV Xuân Diệu
+url = https://www.cgv.vn/default/cinox/site/cgv-d-le-roi-soleil
 
 [developers.cloudflare.com]
 match = -31.2%%
@@ -915,4 +915,9 @@ url = https://thst.vn/f/thoi-su-dia-phuong-1
 match = -150.0%%
 title = Nguyên nhân và cách chỉnh quạt trần bị lắc đơn giản
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/nguyen-nhan-va-cach-chinh-quat-tran-bi-lac-don-gian
+
+[hanamtv.vn]
+match = -200.0%%
+title = Cảnh sát giao thông Hà Nam giúp đỡ trẻ bị lạc về gia đình!
+url = https://hanamtv.vn/canh-sat-giao-thong-ha-nam-giup-do-tre-bi-lac-ve-gia-dinh-36884.html
 
