--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-08 13:49:15
+lastsearch = 2024-08-08 15:35:40
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = -31.2%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=87cd9f5db8b9fddc&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiVwdzm5uSHAxUgm4kEHUhhFhgQsZYEegQIUhAC
+url = https://www.google.com/search?sca_esv=5bde84972c3682ff&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjc7sXL_uSHAxV3F1kFHeFqDjsQsZYEegQIURAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -419,7 +419,7 @@ url = https://m.facebook.com/wallingford4140/?locale=hu_HU
 [twitter.com]
 match = -34.8%%
 title = League of Legends (@LeagueOfLegends) / X
-url = https://twitter.com/leagueoflegends
+url = https://twitter.com/leagueoflegends?lang=en
 
 [apnews.com]
 match = -108.7%%
