--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-08 15:36:42
+lastsearch = 2024-08-08 16:17:21
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 0.0%%
-title = Bộ sản phẩm SH_BC22 061
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-061
+match = 4.3%%
+title = Bộ sản phẩm SH_BC23 082
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 26.5%%
-title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
-url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
+match = 23.5%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH08
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh08
 
 [shopee.vn]
 match = -2.9%%
@@ -54,7 +54,7 @@ url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-
 [everon.com.vn]
 match = 15.4%%
 title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/?srsltid=AfmBOoqM5h9nBNPEJFyrNdOMAnIpA-zZFueF7o4iPesz-52tsVYZYJqr
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
 
 [chandrapsaigon.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 5.9%%
-title = Mẫu chăn ga gối cotton 100%% mã mầu BC22-062
-url = https://songhong.info/chan-ga-goi-bc62
+match = 2.9%%
+title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
+url = https://songhong.info/chan-ga-goi-bc-04
 
 [kona.com.vn]
 match = 41.2%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
@@ -114,7 +114,7 @@ url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
 [everonvn.com.vn]
 match = -4.2%%
 title = Bộ Everon Ep1822 - Sheep
-url = https://everonvn.com.vn/everon/623/bo-everon-ep1822?srsltid=AfmBOoq2QmSrXHt1L8vYjz4dn8YdK0e0j4Ks5C5ZCh-UY_z6raY9ilKU
+url = https://everonvn.com.vn/everon/623/bo-everon-ep1822
 
 [staging.happynest.com.vn]
 match = -8.8%%
