--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-08 15:45:13
+lastsearch = 2024-08-08 16:18:43
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOooYvIsv8J4cyc-mAyrfKeuEi1plSfqJgvuHaeOHr2pWGErTRsDj
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 14.8%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Kh
 [foreverbedding.net]
 match = -59.3%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOoox7mzwHNlcTfxF7ZuIaMZSuB6AuoAsMeGCifGohHHiA8jNLTqD
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOoqoXen_v6XGl7Dzg2H-bS9fNAr2oTpfVYSvSgVASfyjGXbrl0T-
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
 [chieutrelinhchi.com]
 match = 0.0%%
