--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-08 10:34:40
+lastsearch = 2024-08-08 16:16:39
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -106.7%%
+title = Busan Korean Food | Ho Chi Minh City
+url = https://www.facebook.com/Busan.Korean.Food/?locale=vi_VN
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html
+url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOoomAUkKRMBykgVlcHz_ZSx1AeAUMN4-1xGD9RAlzb8pYRHCeREO
 
 [shopee.vn]
 match = -186.7%%
@@ -77,9 +77,9 @@ title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
 url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
-match = -113.3%%
-title = Bộ vận động 12 chi tiết - Đồ chơi Bắc Hà
-url = https://dochoimamnon123.com/bo-van-dong-12-chi-tiet
+match = -240.0%%
+title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơi Bắc Hà
+url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
 
 [m.facebook.com]
 match = -140.0%%
@@ -319,7 +319,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [www.chieuduong.vn]
 match = 0.0%%
 title = Micro chính hãng
-url = https://www.chieuduong.vn/collections/micro-chinh-hang
+url = https://www.chieuduong.vn/collections/micro-chinh-hang?srsltid=AfmBOorWZ-6rJwIL_dahnxm-tUDvlq_xVZ-nqDcKV5l8VgPBUQ9hbVIm
 
 [saca.com.vn]
 match = -366.7%%
