--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-08 11:50:30
+lastsearch = 2024-08-08 16:29:18
 
 [shopee.vn]
 match = 48.0%%
@@ -47,9 +47,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.lazada.vn]
-match = -36.0%%
-title = Mẫu mùng chụp tự bung người lớn chống muỗi gấp gọn ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-dinh-tron-mau-mung-chup-tu-bung-nguoi-lon-chong-muoi-gap-gon-tien-dung-i2219420128.html
+match = 4.0%%
+title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [demxanh.com]
 match = 12.0%%
