--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-08 14:45:14
+lastsearch = 2024-08-08 16:59:24
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -22,14 +22,14 @@ title = Ruột gối Standard
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-129.html
 
 [shopee.vn]
-match = 64.7%%
-title = Ruột gối ép hơi Korea
-url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
+match = -58.8%%
+title = Đôi Ruột Gối Bông Hạt Korea Ép Hơi 50*70cm
+url = https://shopee.vn/🌱-Đôi-Ruột-Gối-Bông-Hạt-Korea-Ép-Hơi-50*70cm-i.125787394.5970171584
 
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOopLnaif6pVbLSfFWJjbfQMxJ4wTiB4EAfE6PPWfwllQNM3knfoF
 
 [everonkorea.com]
 match = -100.0%%
@@ -42,19 +42,19 @@ title = Ruột gối - Drap giường, chăn ga gối thảm Hàn Quốc
 url = https://drapgiuonghanquoc.com/danh-muc-san-pham/ruot-chan-ruot-goi/ruot-goi/
 
 [sieuthidemonline.vn]
-match = -35.3%%
-title = Ruột gối tựa 50x50cm chất lượng cao
-url = https://sieuthidemonline.vn/ruot-goi-tua-50x50/
+match = -135.3%%
+title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
+url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOoq_aaJAP9l3rJ1BGUlza0ADKjPdtWnxcucmK3IxZP-j8jgSrTx-
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOorpsS0Ozb7B-98fJev7x2llwjzRhg8Ul3DaklMSfelXRXyAOqtF
 
 [www.hotdeal.vn]
 match = -111.8%%
 title = Combo 2 Ruột Gối Bông Ép Korea Hút Chân Không Hà Nội
-url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html
+url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html?srsltid=AfmBOoqj0a8Bgr9qUCGGeKxO7CntbVRRHkpybGw5ZIKWC7fjVQUjXatV
 
 [dienmaytinphong.com]
 match = -70.6%%
@@ -190,4 +190,9 @@ url = https://en.wikipedia.org/wiki/Otto_Warmbier#:~:text=He was convicted of at
 match = 11.8%%
 title = Mam Ruoc Cham recipe
 url = https://cookswithoutborders.com/mam-ruoc-cham
+
+[vn.usembassy.gov]
+match = -194.1%%
+title = Các Giấy tờ được Yêu cầu - Đại sứ quán và Tổng Lãnh sự ...
+url = https://vn.usembassy.gov/vi/required-documents/
 
