--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-08 11:29:30
+lastsearch = 2024-08-08 16:51:25
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -316.7%%
-title = The one of the world's leading tourism groups - TUI Group
-url = https://www.tuigroup.com/en-en
+match = -33.3%%
+title = ANNUAL REPORT 2015 / 16
+url = https://www.tuigroup.com/damfiles/default/tuigroup-15/en/investors/6_Reports-and-presentations/Reports/2016/TUI_AR_2015-16_withMagazine.pdf-4572fe3dec10f0196450291182933f8c.pdf
 
 [www.tui.nl]
 match = -316.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -183.3%%
+title = Travel Money | Foreign Currency Exchange
+url = https://www.tui.co.uk/travel-money
 
 [maritime-executive.com]
 match = -316.7%%
