--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-08 14:54:39
+lastsearch = 2024-08-08 16:46:51
 
 [hk.linkedin.com]
 match = 7.7%%
@@ -117,9 +117,9 @@ title = South China Morning Post: Breaking China, Asia, HK News ...
 url = https://www.scmp.com/asia
 
 [www.facebook.com]
-match = -384.6%%
-title = 2018年度J3 - J12全港兒童繪畫比賽- J5組(2012 ...
-url = https://www.facebook.com/photo.php?fbid=1963553563689998&id=966751760036855&set=a.1019627311415966&locale=zh_HK
+match = -15.4%%
+title = Coco Alexandra Chan
+url = https://www.facebook.com/CocoAlexandraChan/
 
 [tel.directory.gov.hk]
 match = -84.6%%
