--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-08 14:26:19
+lastsearch = 2024-08-08 16:47:57
 
 [scholar.google.com]
 match = -43.8%%
@@ -182,9 +182,9 @@ title = 4 bộ phim Hoa ngữ bị cấm chiếu vì ngập tràn cảnh nóng .
 url = https://2sao.vn/4-bo-phim-hoa-ngu-bi-cam-chieu-vi-ngap-tran-canh-nong-tran-trui-n-196567.html
 
 [tuoitre.vn]
-match = -168.8%%
-title = BCG Energy chuẩn bị lên sàn UpCoM, giá tham chiếu ...
-url = https://tuoitre.vn/bcg-energy-chuan-bi-len-san-upcom-gia-tham-chieu-15-600-dong-20240724183300335.htm
+match = -43.8%%
+title = Audition mừng sinh nhật 18 năm
+url = https://tuoitre.vn/audition-mung-sinh-nhat-18-nam-2024080811210802.htm
 
 [cafef.vn]
 match = -200.0%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -118.8%%
-title = Đặt mua vé xem phim online ngay trên MoMo
-url = https://www.momo.vn/cinema
+match = -18.8%%
+title = Lịch chiếu phim Lotte Cinema
+url = https://www.momo.vn/cinema/rap/lotte-cinema
 
 [baotintuc.vn]
 match = -37.5%%
