--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-08-08 14:53:17
+lastsearch = 2024-08-08 16:58:42
 
 [www.instagram.com]
 match = -138.9%%
@@ -52,9 +52,9 @@ title = NEM CHUA HÀ THÀNH 200G
 url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = 27.8%%
+title = Nem Nuong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-air-fryer?lang=en
 
 [thuvienphapluat.vn]
 match = -133.3%%
