--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-08 14:52:36
+lastsearch = 2024-08-08 16:54:51
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Điệp Xuân Thảm giường Bode 140x190
+match = 27.3%%
+title = Thảm giường Bode 140x190 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
 
 [tiki.vn]
@@ -17,8 +17,8 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -127.3%%
-title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh nổi ...
+match = -113.6%%
+title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh ...
 url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html
 
 [flexhouse.vn]
@@ -157,7 +157,7 @@ title = Chăn drap nệm giường
 url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 
 [jysk.vn]
-match = -118.2%%
-title = Seersucker duvet cover set ALICIA 200x220 multi - JYSK.vn
-url = https://jysk.vn/en-US/seersucker-duvet-cover-set-alicia-200x220-multi
+match = -90.9%%
+title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp
+url = https://jysk.vn/ga-chun-140x200cm
 
