--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-08 13:01:09
+lastsearch = 2024-08-08 16:48:18
 
 [www.everonqb.com]
-match = 0.0%%
-title = Everon Quảng Bình Vỏ gối ôm ESB23022 80x100
+match = -52.2%%
+title = Vỏ gối ôm ESB23022 80x100 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-om-esb23022-80x100.html
 
 [www.reddit.com]
@@ -24,7 +24,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 [www.diepxuan.com]
 match = 43.5%%
 title = Điệp Xuân Vỏ gối ôm ES1715 80x100
-url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
+url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html?srsltid=AfmBOoqVJ-5xvr_hrcbS6zCXAitbwD-9ORHpncm4AzB4PnGBSEc27b4n
 
 [forum.cartridgecollectors.org]
 match = -21.7%%
