CI images update

--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-08 14:40:00
+lastsearch = 2024-08-08 17:13:02
 
 [demxanh.com]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 5
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
+match = -45.5%%
+title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -107,9 +107,9 @@ title = Giường gấp có đệm
 url = https://hanhtinhxanh.com.vn/giuong-gap-co-dem.html
 
 [www.lazada.vn]
-match = -59.1%%
-title = 1 tấm ga trải giường Thẩm mỹ viện đồng bằng ...
-url = https://www.lazada.vn/products/1-tam-ga-trai-giuong-tham-my-vien-dong-bang-tam-ga-trai-giuong-cotton-than-thien-voi-da-cham-mem-mai-chong-co-mat-xa-spa-cokhong-co-lo-i2534625342.html
+match = -104.5%%
+title = Ga trải giường chống thấm ĐỦ SIZE (màu giao ngẫu nhiên ...
+url = https://www.lazada.vn/products/ga-trai-giuong-chong-tham-du-size-mau-giao-ngau-nhien-ma-03-i167810729.html
 
 [vn.my-best.com]
 match = -72.7%%
