--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-08 16:50:03
+lastsearch = 2024-08-08 17:18:58
 
 [dreamland.vn]
-match = 7.5%%
-title = Dreamland chuyên chăn ga gối đệm cao cấp
-url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
+match = 18.2%%
+title = Chăn ga gối đệm cao cấp Dreamland
+url = http://dreamland.vn/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Dreamland Úc freesize NK gấm PT
 url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.html
 
 [demluxury.com.vn]
-match = 47.8%%
-title = Chăn ga gối Dreamland Sale Off lên tới 50%% tại ...
-url = https://demluxury.com.vn/danh-muc-san-pham/chan-ga-goi-dem-dreamland/chan-ga-goi-dreamland/?srsltid=AfmBOoogifTM1MwenfBT87x6HX_HtXYj6pMTsu0xGeDLV7D0iWC22SSH
+match = 31.6%%
+title = Bộ chăn ga gối Cotton MOC 03 Dreamland
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
 
 [www.facebook.com]
 match = -8.0%%
@@ -28,8 +28,8 @@ url = https://www.facebook.com/Dreamland.com.vn/
 
 [thegioidemonline.com]
 match = 62.8%%
-title = Bộ chăn ga gối Dreamland cotton lụa NK PT29
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-9.html?srsltid=AfmBOooQ9wPlq_vVlA6d-qgQFgG_iUDHgxF_pdw-eSlceg5hrmFQEz5d
+title = Bộ chăn ga gối Dreamland cotton lụa NK PT25
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html
 
 [demdreamland.vn]
 match = 31.0%%
