--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-08 15:45:07
+lastsearch = 2024-08-08 17:13:42
 
 [shopee.vn]
 match = 7.4%%
@@ -17,9 +17,9 @@ title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [www.lazada.vn]
-match = -44.4%%
-title = Mền Lông Tuyết Thái Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/men-long-tuyet-thai/?srsltid=AfmBOoqNAc5v70v2t--LFSDVgzMFwJuLL7O1XJE3-x2m4CYhZNJ2gMFf
+match = -11.1%%
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-18mx2m-2mx2m3-sanbeovn-i2015859119.html?srsltid=AfmBOoqaqIOMU4qxKntR3RjOrxzCndk3IP4LjfEdsECADIhivF1rq0hq
 
 [tiki.vn]
 match = 11.1%%
@@ -174,7 +174,7 @@ url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOooIZtghMYh_X4p6QueyYHrbbdoaMKjnYKZDZng5wQCezDKDCkFq
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOop64eoPJCbf5zX0MRB2P-N4peC0dvvhr24Use8EkpJt25DZRExv
 
 [tuoitre.vn]
 match = -59.3%%
