--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-08 12:59:08
+lastsearch = 2024-08-08 17:18:37
 
 [shopee.vn]
 match = -25.9%%
@@ -13,8 +13,8 @@ url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 
 [www.lazada.vn]
 match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
-url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html?srsltid=AfmBOoro6bn_kxaYPmdIMMSVGZCzv7z1aVqtztT1huzHihUSaEaPVKfk
 
 [tiki.vn]
 match = 11.1%%
