--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-08 14:33:38
+lastsearch = 2024-08-08 17:16:08
 
 [www.tiktok.com]
 match = -235.3%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdoflc2fU&sig=ACfU3U3IflD6hsIbD5v3DzzRFuBIQuwgTA&hl=en&sa=X&ved=2ahUKEwiOmbWb4uSHAxU0EVkFHehpIukQ6AF6BAglEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdogd6_jZ&sig=ACfU3U2p1AMoGfUiGunyR11bSuJQDrk4Kg&hl=en&sa=X&ved=2ahUKEwjB9_KFleWHAxXuDjQIHUiQDDEQ6AF6BAhAEAM
 
 [tax.vermont.gov]
 match = -29.4%%
