--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-08 13:53:14
+lastsearch = 2024-08-08 17:25:56
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -177,9 +177,9 @@ title = Nonalcoholic fatty liver disease - Symptoms and causes
 url = https://www.mayoclinic.org/diseases-conditions/nonalcoholic-fatty-liver-disease/symptoms-causes/syc-20354567
 
 [gs.statcounter.com]
-match = -42.9%%
-title = Mobile Browser Market Share Worldwide
-url = https://gs.statcounter.com/browser-market-share/mobile/worldwide
+match = -76.2%%
+title = Desktop Operating System Market Share Worldwide
+url = https://gs.statcounter.com/os-market-share/desktop/worldwide
 
 [www.nintendo.com]
 match = -123.8%%
@@ -244,7 +244,7 @@ url = https://www.orpha.net/en/disease/detail/444
 [nempacboston.org]
 match = -47.6%%
 title = Events from June 18, 2022 – June 16, 2023
-url = https://nempacboston.org/events/list/?tribe-bar-date=2021-09-01
+url = https://nempacboston.org/events/list/?tribe-bar-date=2021-11-21
 
 [www.jcog.com.tr]
 match = -142.9%%
