--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-08 11:33:18
+lastsearch = 2024-08-08 17:15:49
 
 [www.cms.gov]
 match = 4.5%%
@@ -537,8 +537,8 @@ title = Characterization of Sulfates, Odor, Smoke, POM ... - epa nepis
 url = https://nepis.epa.gov/Exe/ZyPURL.cgi?Dockey=P100S7RK.TXT
 
 [www.justice.gov]
-match = -81.8%%
-title = Recognized Org and Accredited Rep Roster by ...
+match = -59.1%%
+title = Recognized Organizations and Accredited ...
 url = https://www.justice.gov/eoir/page/file/942306/dl
 
 [www2.santacruzcountyca.gov]
