--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-08 13:56:43
+lastsearch = 2024-08-08 17:23:52
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,14 +17,14 @@ title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
 
 [www.lazada.vn]
-match = 23.8%%
-title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
+match = -57.1%%
+title = （Liangzhou） THẢM NHUNG TRẢI SÀN BALI 5D MẪU MỚI 2Mx3M
+url = https://www.lazada.vn/products/liangzhou-tham-nhung-trai-san-bali-5d-mau-moi-2mx3m-i2694071431-s13173605917.html?from_gmc=1&fl_tag=1
 
 [tiki.vn]
-match = -9.5%%
-title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
-url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
+match = -85.7%%
+title = Mua Thảm trải sàn Bali giá rẻ chất lượng 2m*3m. m6*2m3
+url = https://tiki.vn/tham-trai-san-bali-gia-re-chat-luong-2m-3m-m6-2m3-p143202560.html
 
 [muachunghaiphong.com]
 match = 0.0%%
