CI images update

--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-08 16:30:00
+lastsearch = 2024-08-08 17:46:45
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 21
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-21.html?srsltid=AfmBOorUN-0YemtkSjKsFnxrNgAo7rBsARC2WYoylvd9wYI2Kbby42pu
 
 [www.diepxuan.com]
 match = -3.6%%
 title = Bộ ga chun chần WarmDream 180x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-chan-warmdream-180x200-hq.html
+url = https://www.diepxuan.com/bo-ga-chun-chan-warmdream-180x200-hq.html?srsltid=AfmBOooha7tUYubEPRkFR5h-8MgiAY4QBFSj_gL7ODfqVI9bs7i8VP-N
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -199,7 +199,7 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/
+url = https://diepxuan.com/?srsltid=AfmBOoph7f4Z9fJjpbdeKEBQ3OzgVuorWcJo5qVNxEQ-JveZov-QzoHw
 
 [www.tripadvisor.com]
 match = -50.0%%
