--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-08 14:27:05
+lastsearch = 2024-08-08 17:34:58
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = 17.1%%
+title = Bộ Chăn Ga Everon 3 Triệu - 5 Triệu
+url = https://everon.online/collections/bo-chan-ga-everon-3-trieu-5-trieu
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
+title = Everon EPM-22063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22063.html
 
 [demxanh.com]
 match = 30.6%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 29.7%%
-title = BỘ CHĂN GA GỐI GIẤC MƠ MÂY - ESJ24030
-url = https://www.everonvni.vn/bo-chan-ga-goi-giac-mo-may-esj24030/?srsltid=AfmBOoo5iYWbywU30RQgyUHvbqVey-E04feN6oTGDFgF8UHq_HZSrF5v
+match = 20.0%%
+title = BỘ CHĂN GA GỐI TRÀ MY KHOE HƯƠNG - EPM24063
+url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
 
 [everonhanquoc.vn]
 match = 22.6%%
