--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-08 14:50:30
+lastsearch = 2024-08-08 17:39:30
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -77.3%%
-title = Chiếu Điều Hòa Cao Su Non Bo Chun Chanel Coco phiên ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html
+match = 27.3%%
+title = Ga gối chun nỉ COCO KHÔNG VIỀN
+url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html
 
 [www.instagram.com]
 match = -81.8%%
@@ -47,14 +47,14 @@ title = Bộ Ga Gối Nỉ Nhung MÀU XÁM COCO 1m6x2m in Nổi Hoạ ...
 url = https://www.sendo.vn/bo-ga-goi-ni-nhung-mau-xam-coco-1m6x2m-in-noi-hoa-tiet-mau-moi-2023-116258982.html
 
 [demxanh.com]
-match = -40.9%%
-title = Chiếu cao su non Coco bo chun màu xám nhạt
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
+match = -27.3%%
+title = Chiếu cao su non Coco bo chun màu hồng
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-hong.html
 
 [www.tiktok.com]
-match = -9.1%%
-title = [SET 3 MÓN] GA GỐI NỈ NHUNG CoCo Nhập Khẩu
-url = https://www.tiktok.com/@vebo1912plp/video/7364029858747256081
+match = -59.1%%
+title = Ga gối coco nằm điều hoà mát rễ chịu#coco #gagoi
+url = https://www.tiktok.com/@decor6223/video/7365936323837906177
 
 [thegioidemviet.vn]
 match = -122.7%%
