--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-08 16:53:27
+lastsearch = 2024-08-08 17:37:05
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
 url = https://changagoidemsonghong.com/chan-ga-goi-bc22
 
 [songhong.info]
-match = -8.3%%
-title = Mẫu chăn ga gối cao cấp Urban mã UC22-021
-url = https://songhong.info/chan-ga-goi-uc021
+match = -66.7%%
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063 - Sông Hồng ...
+url = https://songhong.info/chan-ga-goi-bc63
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -39,7 +39,7 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 [everon.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOooduwuFwlREKweIKiKnnrD0fEJHl1glvfyVqp3qNcwkrCvkY69F
 
 [dailyeveron.vn]
 match = -66.7%%
