--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-08 12:13:30
+lastsearch = 2024-08-08 17:33:32
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -152.6%%
+title = [Có sẵn] Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm ...
+url = https://shopee.vn/-Có-sẵn-Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.610736536.19889705939?publish_id=&sp_atk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c&xptdk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c
 
 [chieutrelanlan.com]
 match = -105.3%%
