--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-08 14:14:55
+lastsearch = 2024-08-08 17:36:23
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -382,13 +382,13 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [www.lazada.vn]
-match = -153.3%%
-title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
+match = -146.7%%
+title = Chiếu Lác May Giá Tốt T08/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [www.chieulongdinh.com.vn]
-match = -126.7%%
-title = Chiếu cói sọc | 0,8m x 2m - Chiếu Hiệp Thành
+match = 0.0%%
+title = Chiếu cói sọc | 0,8m x 2m
 url = http://www.chieulongdinh.com.vn/en/san-pham/8/chieu-coi-soc-08m-x-2m.html
 
 [www.tamliteusa.com]
