--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-08 15:36:21
+lastsearch = 2024-08-08 17:37:26
 
 [shopee.vn]
 match = 25.0%%
@@ -395,4 +395,9 @@ url = https://thoibaotaichinhvietnam.vn/canh-bao-chieu-tro-lua-dao-ban-thuoc-dac
 match = 37.5%%
 title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
+
+[medlatec.vn]
+match = -150.0%%
+title = Nội mạc tử cung dày bao nhiêu là dễ thụ thai nhất?
+url = https://medlatec.vn/tin-tuc/noi-mac-tu-cung-day-bao-nhieu-la-de-thu-thai-nhat-s74-n19392
 
