--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-08 15:46:41
+lastsearch = 2024-08-08 17:47:25
 
 [shopee.vn]
 match = -216.7%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -258.3%%
-title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
-url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
+match = -116.7%%
+title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
+url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
 
 [vn.my-best.com]
 match = -233.3%%
@@ -72,8 +72,8 @@ title = Nệm lót ngồi simili chống thấm nước
 url = https://noithatktp.com/nem-lot-ngoi-simili-chong-tham-nuoc
 
 [unicostrading.com]
-match = -391.7%%
-title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham ... - Unicos
+match = -358.3%%
+title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai ...
 url = https://unicostrading.com/meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai-san1/
 
 [viethands.vn]
@@ -147,8 +147,8 @@ title = THAM NA HOMETAURANT, Bangkok - Phra Nakhon
 url = https://www.tripadvisor.com/Restaurant_Review-g293916-d1458250-Reviews-Tham_Na_Hometaurant-Bangkok.html
 
 [www.pinterest.com]
-match = -316.7%%
-title = ban ghe dep 4 ghe lung nem Han Quoc | Ghế ăn, Ghế, Thiết kế
+match = -225.0%%
+title = ban ghe dep 4 ghe lung nem Han Quoc | Ghế ăn ...
 url = https://www.pinterest.com/pin/606156431127145550/
 
 [dergo.vn]
