--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-08 06:52:10
+lastsearch = 2024-08-08 17:39:11
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -15.0%%
-title = Abraham Palmer - UCSD Profiles
-url = https://profiles.ucsd.edu/abraham.palmer
+match = -5.0%%
+title = Gary Vilke | UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -58,8 +58,8 @@ url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [profiles.ucla.edu]
 match = -41.7%%
