--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-08 14:46:36
+lastsearch = 2024-08-08 18:15:43
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -187.5%%
-title = 2. Dat tay nhau lượn pho Phan Đình Phùng, chụp ảnh ...
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1473486206648444/
+match = -150.0%%
+title = TEAMFIGHT TACTICS | ESPORTS WORLD CUP | VÒNG ...
+url = https://m.facebook.com/vietnamesportsfederation/videos/teamfight-tactics-esports-world-cup-vòng-bảng-ngày-1/515523917714824/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -352,9 +352,9 @@ title = Bàn đạp phanh ô tô rung lắc phải làm sao?
 url = http://baoyenbai.com.vn/227/325068/Ban-dap-phanh-o-to-rung-lac-phai-lam-sao.aspx
 
 [atgt.baogiaothong.vn]
-match = -168.8%%
-title = Hai tài xế bị thương sau cú tông mạnh giữa hai xe tải
-url = https://atgt.baogiaothong.vn/hai-tai-xe-bi-thuong-sau-cu-tong-manh-giua-hai-xe-tai-192240807204550287.htm
+match = -231.2%%
+title = Khối đá hơn 10 tấn bất ngờ rơi từ sườn núi, công nhân lái ...
+url = https://atgt.baogiaothong.vn/khoi-da-hon-10-tan-bat-ngo-roi-tu-suon-nui-cong-nhan-lai-may-xuc-tu-vong-tai-cho-192240808132341809.htm
 
 [cafebiz.vn]
 match = -200.0%%
