--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-08 17:44:40
+lastsearch = 2024-08-08 18:21:12
 
 [www.youtube.com]
 match = -40.7%%
@@ -42,9 +42,9 @@ title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
 
 [demxanh.com]
-match = -11.1%%
-title = [HOT] Top 9 gối nằm mát tốt nhất cho ngày hè
-url = https://demxanh.com/goi-nam-mat-tot-nhat.html
+match = -44.4%%
+title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
+url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
 match = -44.4%%
@@ -147,9 +147,9 @@ title = Người góp phần làm khởi sắc bản biên giới Mùa Xuân
 url = https://www.bienphong.com.vn/nguoi-gop-phan-lam-khoi-sac-ban-bien-gioi-mua-xuan-post477378.html
 
 [m.facebook.com]
-match = -44.4%%
-title = Review Pleiku Gia Lai | 🍺 𝗫𝗨𝗔̂́𝗧 𝗛𝗜𝗘̣̂𝗡 𝟭 𝗤𝗨𝗔́𝗡 "𝗕𝗘𝗘𝗥 ...
-url = https://m.facebook.com/groups/1479571308748046/posts/7462172860487831/
+match = -48.1%%
+title = Hội Khẩu Nghiệp - Hội Nhiều Chuyện | Cát Phượng nói thêm
+url = https://m.facebook.com/groups/572348384121798/posts/1272236694132960/
 
 [vietbao.com]
 match = -22.2%%
