--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-08 15:47:54
+lastsearch = 2024-08-08 18:14:19
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -12,9 +12,9 @@ title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 38.7%%
+title = Bộ chăn ga gối Singapore King Luxury KL2418
+url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html
 
 [songhongonline.vn]
 match = 50.0%%
