--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-08 12:32:06
+lastsearch = 2024-08-08 18:16:46
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -1215,4 +1215,9 @@ url = https://cathedral.org/visit-tour/space-window-celebration/
 match = -87.5%%
 title = wjfw.com
 url = https://www.wjfw.com/
+
+[raftrentals.com]
+match = -200.0%%
+title = Sacramento Best Rafting company - Tubing Rentals in ...
+url = https://raftrentals.com/
 
