CI images update

--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-08 17:17:36
+lastsearch = 2024-08-08 18:26:42
 
 [www.zillow.com]
 match = -115.4%%
@@ -670,4 +670,9 @@ url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
 match = -23.1%%
 title = Itinéraire Google Maps
 url = https://www.google.com/maps/dir
+
+[earthquake.usgs.gov]
+match = 0.0%%
+title = Did You Feel It?
+url = https://earthquake.usgs.gov/data/dyfi/
 
