--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-08 14:51:54
+lastsearch = 2024-08-08 18:43:37
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/Ren_(philosophy)
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fskKUasZd&sig=ACfU3U1C0lmwRbaNfa51zEaPLw_CD2pBXA&hl=en&sa=X&ved=2ahUKEwjLxc3Q6OSHAxUXvokEHeBTMfkQ6AF6BAg2EAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlhjIKpjc&sig=ACfU3U2bKip73uEv91DjiTqTPOlymhhIbw&hl=en&sa=X&ved=2ahUKEwjK27nMqOWHAxXklu4BHdHTNMgQ6AF6BAglEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = King Ren 👑 (@rentman2016)
 url = https://www.instagram.com/rentman2016/?locale=推特和网络营销的区别＜谷歌推广认证seo8.vip＞3boO&hl=am-et
 
 [www.youtube.com]
-match = -170.0%%
-title = Ren - 16 bar challenge *REACTION*
-url = https://www.youtube.com/watch?v=DN-xEHVEvtM
+match = -133.3%%
+title = Ren
+url = https://www.youtube.com/channel/UCqq3VcwPGseErHUa0-xLInQ
 
 [www.va.gov]
 match = -210.0%%
