--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-10 00:16:36
 lastsearch = 2024-08-08 18:14:40
 
 [www.instagram.com]
-match = -238.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -87,9 +87,9 @@ title = CH.6 by Yuki Chan on Prezi
 url = https://prezi.com/audhwqir0lhx/ch6/
 
 [tel.directory.gov.hk]
-match = -46.2%%
-title = Civil Engineering Office
-url = https://tel.directory.gov.hk/0275013459_ENG.html
+match = -30.8%%
+title = Legal Services Section
+url = https://tel.directory.gov.hk/0259000037_ENG.html
 
 [www.straitstimes.com]
 match = -161.5%%
