--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-08 17:15:07
+lastsearch = 2024-08-08 18:34:26
 
 [scholar.google.com]
 match = -43.8%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -18.8%%
-title = Lịch chiếu phim Lotte Cinema
-url = https://www.momo.vn/cinema/rap/lotte-cinema
+match = -118.8%%
+title = Đặt mua vé xem phim online ngay trên MoMo
+url = https://www.momo.vn/cinema
 
 [baotintuc.vn]
 match = -37.5%%
