--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-08-08 17:57:37
+lastsearch = 2024-08-08 18:30:54
 
 [www.instagram.com]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -11.1%%
-title = Nem Nướng added a new photo.
-url = https://m.facebook.com/100054522756775/photos/961532129007537/
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [lanchi.vn]
 match = 16.7%%
