CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-08 10:45:47
+lastsearch = 2024-08-08 18:47:05
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Eden Centwr Riot
-url = https://www.tiktok.com/discover/eden-centwr-riot
+match = -55.0%%
+title = Guy Falls Through Soft Play Full Video
+url = https://www.tiktok.com/discover/guy-falls-through-soft-play-full-video
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -120.0%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -90.0%%
+title = BITCOIN PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/btc-to-usd-forecast-today-dollar-to-bitcoin
 
 [www.akc.org]
 match = -45.0%%
@@ -520,4 +520,9 @@ url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
 match = -140.0%%
 title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
 url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
+
+[www.wdtn.com]
+match = -130.0%%
+title = FBI: California woman brought sword, whip and other ...
+url = https://www.wdtn.com/news/politics/ap-politics/ap-fbi-california-woman-brought-sword-whip-and-other-weapons-into-capitol-during-jan-6-riot/
 
