--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-08 17:55:12
+lastsearch = 2024-08-08 18:57:38
 
 [www.amazon.com]
-match = -100.0%%
-title = Ghe da yeu thuong - Hugo Luân
-url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
+match = -309.1%%
+title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
+url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
 
 [chungauto.vn]
-match = -372.7%%
-title = Bọc ghế da Simili ô tô hàng chất lượng | Giá tốt, trả góp 0%%
-url = https://chungauto.vn/boc-ghe-da-simili-cho-oto-p996.html
+match = -336.4%%
+title = Bọc ghế da Nappa cho ô tô | Giá ưu đãi 2024, trả góp 0%%
+url = https://chungauto.vn/boc-ghe-da-nappa-p993.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = 18.2%%
-title = Bọc ghế da ô tô
-url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
+match = -318.2%%
+title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
+url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
 
 [github.com]
 match = -81.8%%
@@ -104,7 +104,7 @@ url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 [www.lazada.vn]
 match = -136.4%%
 title = Thảm Lót Ghế Sofa Da Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/
+url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/?srsltid=AfmBOopra4u3UdUKIGKyOhAfnhK35eKsTBH0ZZ-Wdx1Yj-wBsqGOYZMF
 
 [richhome.vn]
 match = -190.9%%
