--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-08 13:22:13
+lastsearch = 2024-08-08 18:48:52
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 180x200 - Điệp Xuân
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
@@ -17,9 +17,9 @@ title = Thảm trải giường lông cừu TLC 06 - Hà Nội
 url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
-match = -59.1%%
-title = Thảm nỉ nhung trải giường GC ( 1 Ga + 2 vỏ gối ...
-url = https://www.lazada.vn/products/tham-ni-nhung-trai-giuong-gc-1-ga-2-vo-goi-nam-i1022858922.html
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -133,7 +133,7 @@ url = https://www.sieuthinem.vn/nem-cao-su-5-zone-aloe-kim-cuong.html
 
 [0869125101.taphoa.so]
 match = -81.8%%
-title = Ga - Gối - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
+title = Chăn - Ga - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
 url = https://0869125101.taphoa.so/products/tham-trai-giuong-180x200-E4b8FaEqXyei7JaD9JrXQk
 
 [m.thitruongsi.com]
