--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-08 17:39:11
+lastsearch = 2024-08-08 18:46:24
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -58,8 +58,8 @@ url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = -41.7%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -85.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
+match = -170.0%%
+title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care Medicine
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
 
 [www.dir.ca.gov]
 match = -28.6%%
