CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-08 16:56:56
+lastsearch = 2024-08-08 19:31:33
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -445,4 +445,9 @@ url = https://phaata.com/en/zip-code/thai-binh-zip-code-1249.html
 match = -34.8%%
 title = CURRENT INTELLIGENCE BULLETIN - 1954/06/29
 url = https://www.cia.gov/readingroom/document/03001372
+
+[tienhai.thaibinh.gov.vn]
+match = -56.5%%
+title = Ủy ban nhân dân Huyện Tiền Hải - UBND tỉnh Thái Bình
+url = https://tienhai.thaibinh.gov.vn/
 
