--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-08 13:38:32
+lastsearch = 2024-08-08 19:37:46
 
 [shadow.vn]
 match = -140.0%%
@@ -14,7 +14,7 @@ url = https://shadow.vn/den-pin-chieu-xa-fenix-ht18r
 [chuyentactical.com]
 match = 0.0%%
 title = Đèn Pin Fenix - HT18R
-url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/
+url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/?srsltid=AfmBOopA-ZGojt18q0k29Vb1c03APcXLsg2iUKL_IzD3Zmop6wHlT93E
 
 [bisu.vn]
 match = -113.3%%
@@ -189,7 +189,7 @@ url = https://moc.gov.vn/tl/tin-tuc/62544/ha-noi--dam-bao-chieu-sang--ve-sinh-mo
 [www.lazada.vn]
 match = -140.0%%
 title = Đèn pin chiếu xa FENIX HT18R sáng 2800 lumen ...
-url = https://www.lazada.vn/products/den-pin-chieu-xa-fenix-ht18r-sang-2800-lumen-chieu-xa-1100m-pin-sac-21700-5000mah-kem-theo-i2502984890.html
+url = https://www.lazada.vn/products/den-pin-chieu-xa-fenix-ht18r-sang-2800-lumen-chieu-xa-1100m-pin-sac-21700-5000mah-kem-theo-i2502984890.html?srsltid=AfmBOophyRFdP1GjY8B23iQ-841vetKztWeyzZT8pxBScR7R4mhFlTu_
 
 [hachi.com.vn]
 match = -173.3%%
