--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-08 18:01:01
+lastsearch = 2024-08-08 19:35:41
 
 [demxanh.com]
 match = 18.2%%
@@ -13,13 +13,13 @@ url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 7
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [demolympia.com]
 match = -40.9%%
@@ -72,9 +72,9 @@ title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng
 url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
 
 [www.kymdan.com]
-match = -18.2%%
-title = Nệm (mattress) Kymdan Deluxe
-url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
+match = -68.2%%
+title = Vỏ bọc Kymdan UltimateCare (dùng cho nệm Xếp)
+url = https://www.kymdan.com/san-pham/vo-boc-nem-xep-kymdan-ultimatecare
 
 [noithatkenli.vn]
 match = -27.3%%
