CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-08 15:48:56
+lastsearch = 2024-08-08 20:01:37
 
 [hoa18.com]
-match = -126.3%%
-title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài ...
+match = -173.7%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài lộc trong ...
 url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -157.9%%
+title = Kinh Diệu Pháp Liên Hoa 18 - TT. Thích Tuệ Hải - Chùa Long ...
+url = https://www.youtube.com/watch?v=-X8Kxi6LbsI
 
 [kallos.co]
 match = -105.3%%
@@ -340,4 +340,9 @@ url = https://www.brt.vn/cau-chuyen-van-hoa/cau-chuyen-van-hoa-1852024-chieu-phi
 match = -5.3%%
 title = Di sản UNESCO ở Hàn Quốc
 url = https://vietnamese.korea.net/AboutKorea/Culture-and-the-Arts/UNESCO-Treasures-in-Korea
+
+[teamlanhlung.blog]
+match = -84.2%%
+title = CÙNG ĐỈNH LƯU ẢNH ĐẾ YÊU ĐƯƠNG PHÁT ĐƯỜNG ...
+url = https://teamlanhlung.blog/cung-dinh-luu-anh-de-yeu-duong-phat-duong-382/
 
