--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-08-08 17:41:52
+lastsearch = 2024-08-08 20:06:32
 
 [anlacphat.com]
 match = -118.8%%
@@ -49,7 +49,7 @@ url = https://qtetech.com/hop-chong-tinh-dien
 [www.lazada.vn]
 match = -137.5%%
 title = Chiếu Lác May Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-lac-may/?srsltid=AfmBOoqKgvPK0D9PipzbrCTqAqvZVnP201PNEv4hogk2eM6hFZuwIdYe
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [vi.made-in-china.com]
 match = -100.0%%
@@ -140,4 +140,14 @@ url = https://kamytools.com/vam-cao-chu-h-thao-mo-bac-dan-puly-90x100-130x100-16
 match = -218.8%%
 title = Thiết kế và phát triển tủ lạnh chạy bằng năng lượng mặt trời
 url = https://www.appropedia.org/The_Design_and_Development_of_a_Solar_Powered_Refrigerator/vi
+
+[www.carousell.sg]
+match = -162.5%%
+title = 100+ affordable "artist" For Sale | Wall Decor
+url = https://www.carousell.sg/furniture-home-living/wall-decor/artist/q-5762/
+
+[numerique.banq.qc.ca]
+match = -131.2%%
+title = Montréal-matin, vendredi 12 novembre 1971
+url = https://numerique.banq.qc.ca/patrimoine/details/52327/4512793
 
