--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-08 17:13:21
+lastsearch = 2024-08-08 20:08:14
 
 [phana.com.vn]
 match = -90.9%%
@@ -27,9 +27,9 @@ title = giương mn 1
 url = https://www.diepxuan.com/giuong-mn-1.html
 
 [giuonggaphoaphat.com]
-match = -27.3%%
-title = Giuonggaphoaphat.com
-url = http://giuonggaphoaphat.com/
+match = -81.8%%
+title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
+url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
 
 [noithatdogodungduyen.com]
 match = -136.4%%
@@ -162,9 +162,9 @@ title = Country Inn & Suites by Radisson, Stillwater, MN
 url = https://vn.trip.com/hotels/stillwater-1-hotel-detail-2885985/comfort-inn-and-suites-stillwater/
 
 [tunhuamiennam.com]
-match = -9.1%%
-title = Giường Nhựa đài Loan
-url = https://tunhuamiennam.com/san-pham/giuong-nhua-dai-loan-gn16gd/
+match = -172.7%%
+title = giường nhựa cứng ecoplast cao cấp gec60
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
 
 [www.tripadvisor.com]
 match = -172.7%%
@@ -195,4 +195,9 @@ url = https://kidssun.vn/products/giuong-cui-go-que-3-in-1-mau-trang-kt-70x110x8
 match = -390.9%%
 title = I always felt like Nem was the more levelheaded one💔 #fyp ...
 url = https://www.tiktok.com/@famovereverythingg/video/7398777305557978398
+
+[bentreriverside.com]
+match = -300.0%%
+title = SUITE Hướng Sông 1 Giường Đôi - Ben Tre Riverside ...
+url = https://bentreriverside.com/room/suite-huong-song-1-giuong-doi/
 
