--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-08 19:36:42
+lastsearch = 2024-08-08 20:00:12
 
 [demxanh.com]
 match = 0.0%%
@@ -12,8 +12,8 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
-match = -117.4%%
-title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang ...
+match = -91.3%%
+title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp ...
 url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010-s11108591003.html?from_gmc=1&fl_tag=1
 
 [tiki.vn]
@@ -22,9 +22,9 @@ title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [thegioidemviet.vn]
-match = -65.2%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+match = -104.3%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [www.diepxuan.com]
 match = 100.0%%
