--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-08 18:48:09
+lastsearch = 2024-08-08 20:23:34
 
 [shopee.vn]
 match = -216.7%%
@@ -72,8 +72,8 @@ title = Nệm lót ngồi simili chống thấm nước
 url = https://noithatktp.com/nem-lot-ngoi-simili-chong-tham-nuoc
 
 [unicostrading.com]
-match = -358.3%%
-title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai ...
+match = -391.7%%
+title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham ... - Unicos
 url = https://unicostrading.com/meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai-san1/
 
 [viethands.vn]
@@ -119,7 +119,7 @@ url = https://vesinhnhaoninhthuan.com/giat-nem-ghe-sofa-tham
 [www.liena.com.vn]
 match = -291.7%%
 title = Ghế Sofa Cao Cấp - Sofa Nệm Cao Su Phòng Khách Sang ...
-url = https://www.liena.com.vn/noi-that/sofa-nem-cao-cap
+url = https://www.liena.com.vn/noi-that/sofa-nem-cao-cap?srsltid=AfmBOopuAokPzzXopIvYzsPyVP-F9bTqykOJrkdpQEBQ1wfeCzVjDKv6
 
 [www.youtube.com]
 match = -57.1%%
@@ -147,8 +147,8 @@ title = THAM NA HOMETAURANT, Bangkok - Phra Nakhon
 url = https://www.tripadvisor.com/Restaurant_Review-g293916-d1458250-Reviews-Tham_Na_Hometaurant-Bangkok.html
 
 [www.pinterest.com]
-match = -225.0%%
-title = ban ghe dep 4 ghe lung nem Han Quoc | Ghế ăn ...
+match = -316.7%%
+title = ban ghe dep 4 ghe lung nem Han Quoc | Ghế ăn, Ghế, Thiết kế
 url = https://www.pinterest.com/pin/606156431127145550/
 
 [dergo.vn]
