--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-08 17:39:30
+lastsearch = 2024-08-08 20:22:29
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Nỉ Nhung MÀU XÁM COCO 1m6x2m in Nổi Hoạ ...
 url = https://www.sendo.vn/bo-ga-goi-ni-nhung-mau-xam-coco-1m6x2m-in-noi-hoa-tiet-mau-moi-2023-116258982.html
 
 [demxanh.com]
-match = -27.3%%
-title = Chiếu cao su non Coco bo chun màu hồng
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-hong.html
+match = -40.9%%
+title = Chiếu cao su non Coco bo chun màu xám nhạt
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
 
 [www.tiktok.com]
 match = -59.1%%
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -13.6%%
-title = Chăn ga gối đệm - CoCo HOUSE | Vinh Yen
-url = https://www.facebook.com/hoa32/
+match = 18.2%%
+title = Nhóm Chăn Ga Gối Giá Rẻ
+url = https://www.facebook.com/groups/3080859061984793/
 
 [foreverbedding.net]
 match = -27.3%%
