--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-08 20:12:04
+lastsearch = 2024-08-08 20:37:59
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -169,7 +169,7 @@ url = https://dantri.com.vn/suc-khoe/trinh-nu-hoang-cung-da-am-anh-toi-201610041
 [erado.vn]
 match = 7.1%%
 title = Sofa da bò thật nhập khẩu 2185-L10
-url = https://erado.vn/sofa-chung-cu/sofa-da-bo-that-nhap-khau-2185-l10.html
+url = https://erado.vn/sofa-chung-cu/sofa-da-bo-that-nhap-khau-2185-l10.html?srsltid=AfmBOoqULbpwKlf8ayvfE3VLylgCf4PG0OO9Wii6YmcCpNiQaxn6gPL1
 
 [vicopharonli.com]
 match = -60.7%%
@@ -187,9 +187,9 @@ title = Bản đồ website Dropbiz
 url = https://dropbiz.vn/ban-do-website-droppii
 
 [m.facebook.com]
-match = -5.6%%
-title = TƯ VẤN Dh ĐÀI LOAN
-url = https://m.facebook.com/DOHIENDUHOC/?comment_id=Y29tbWVudDoxMTAyNzE0MjkzNTQzODk0XzExMDI3Mjc1MjAyMDkyMzg=
+match = -25.0%%
+title = Chợ Đức Hoà-KCN Tân Đức Long An ✅ | ❌GÓC GIẢI CỨU ...
+url = https://m.facebook.com/groups/1049678078900233/posts/1739540539913980/
 
 [www.instagram.com]
 match = -64.3%%
