--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-08 16:51:04
+lastsearch = 2024-08-08 20:27:06
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -147,9 +147,9 @@ title = Việc Nhà - Domestic Assistance - mrv
 url = https://mraovat.nguoi-viet.com/classified/viec-nha-domestic-assistance-browse-94.aspx
 
 [baodaknong.vn]
-match = -175.0%%
-title = Xếp hạng may mắn của 12 cung hoàng đạo ngày 16/7/2024
-url = https://baodaknong.vn/xep-hang-may-man-cua-12-cung-hoang-dao-ngay-16-7-2024-cung-bao-binh-may-man-nhat-hom-nay-221454.html
+match = -218.8%%
+title = Cây lác (cây cói): Ý nghĩa, hình ảnh, cách trồng, chăm sóc ...
+url = https://baodaknong.vn/cay-lac-cay-coi-y-nghia-hinh-anh-cach-trong-cham-soc-tai-nha-171408.html
 
 [baolaocai.vn]
 match = -25.0%%
