--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-08 17:48:36
+lastsearch = 2024-08-08 20:28:53
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
+match = 40.9%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -17,8 +17,8 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -113.6%%
-title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh ...
+match = -127.3%%
+title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh nổi ...
 url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html
 
 [flexhouse.vn]
