CI images update

--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-08 18:53:04
+lastsearch = 2024-08-08 20:31:20
 
 [www.instagram.com]
 match = -33.3%%
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
 
 [hongkongfp.com]
 match = -269.2%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -261.5%%
-title = South Korea: First lady's Dior bag shakes country's ...
+match = -230.8%%
+title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
