--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-08 18:35:51
+lastsearch = 2024-08-08 20:34:31
 
 [shopee.vn]
-match = -20.7%%
-title = Chiếu nhựa việt thái gấp gọn đa năng kích thước 2mx2m2- ...
-url = https://shopee.vn/Chiếu-nhựa-việt-thái-gấp-gọn-đa-năng-kích-thước-2mx2m2-2-2mx3m-i.125787394.21352125099
+match = 17.2%%
+title = chiếu nhựa giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu nhựa
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -19,7 +19,7 @@ url = https://www.maihuyencorp.com/
 [www.lazada.vn]
 match = -13.8%%
 title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html?srsltid=AfmBOoqNXBE0uA7oFONfFUay3JxKJhKxCbZ07xTIYWwjQ--ZKy9674ZQ
 
 [tiki.vn]
 match = -13.8%%
