--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-08 15:47:44
+lastsearch = 2024-08-08 20:37:54
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 [www.lazada.vn]
 match = 25.0%%
 title = Mùng Tự Bung đỉnh Vuông Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/?srsltid=AfmBOooL2KhaO_AmNhBfv__GJ8Kau5uMLez6NJ6fmAL64xLSe4W5uoUN
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [munghoangphat.com]
 match = 41.7%%
