--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-08 10:46:06
+lastsearch = 2024-08-08 20:38:57
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -664,7 +664,7 @@ url = https://www.yelp.com/biz/oc-cay-dua-san-jose-6
 [twitter.com]
 match = -34.8%%
 title = League of Legends (@LeagueOfLegends) / X
-url = https://twitter.com/leagueoflegends
+url = https://twitter.com/leagueoflegends?lang=en
 
 [docs.deerfield.il.us]
 match = -39.1%%
