--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-08 14:40:19
+lastsearch = 2024-08-08 20:40:41
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -27,9 +27,9 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = 18.2%%
-title = Lapa Ks Trai
-url = https://www.facebook.com/lapaks.trai/
+match = -227.3%%
+title = Eat Healthier and more Economically - Salina
+url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
 
 [www.hoteljob.vn]
 match = -327.3%%
