--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-08 14:49:27
+lastsearch = 2024-08-08 20:32:05
 
 [shopee.vn]
 match = -76.2%%
@@ -14,12 +14,12 @@ url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 [www.lazada.vn]
 match = -85.7%%
 title = Thảm Lông Cừu Thảm Trải Giường Trải SànTtrần Bông 3 ...
-url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOooJwzDprshFm6WwN-G82PB_3mPdJeBXWOWv-hLPu9uu9lbVv_Xe
+url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOorLarZ9w50pIB5IhWB9EdV9kM89idr5gKBcyhOISOs4cCk5X_AM
 
 [tiki.vn]
 match = -38.1%%
-title = Tham trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham trải giường
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [flexhouse.vn]
 match = -42.9%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOoq4t4fzwlb09te6hMG2XsH69aUBWgIHzIHi3AU5yrjNIbky7GWX
 
 [giuongxep.com]
 match = -57.1%%
