--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-08 15:38:05
+lastsearch = 2024-08-08 20:45:15
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận
 url = https://www.vinmec.com/vie/bai-viet/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc-vi/
 
 [www.google.com]
-match = -200.0%%
-title = https://www.google.com/maps/@21.0506866,105.804746...
-url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
+match = -112.5%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [thongtindoingoai.caobang.gov.vn]
 match = -212.5%%
@@ -572,9 +572,9 @@ title = Tình hình kinh tế - xã hội 6 tháng đầu nãm 2024 tỉnh Bình
 url = https://cucthongke.binhdinh.gov.vn/vi/news/tinh-hinh-kinh-te-xa-hoi/tinh-hinh-kinh-te-xa-hoi-6-thang-dau-nam-2024-tinh-binh-dinh-440.html
 
 [caobangtv.vn]
-match = -193.8%%
-title = Đại biểu HĐND huyện Bảo Lạc tiếp xúc cử tri xã Thượng ...
-url = http://caobangtv.vn/tin-tuc-n75927/dai-bieu-hdnd-huyen-bao-lac-tiep-xuc-cu-tri-xa-thuong-ha-co-ba.html
+match = -206.2%%
+title = Đại biểu HĐND huyện Bảo Lạc tiếp xúc cử tri xã Hưng Đạo ...
+url = http://caobangtv.vn/tin-tuc-n76085/dai-bieu-hdnd-huyen-bao-lac-tiep-xuc-cu-tri-xa-hung-dao-hung-thinh.html
 
 [fecredit.com.vn]
 match = -62.5%%
