--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-08 15:45:49
+lastsearch = 2024-08-08 20:51:43
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 [demxanh.com]
 match = 25.0%%
 title = Đệm bông ép Dreamland 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html?srsltid=AfmBOoraMJ8QTtUzPbvJDfUFnLyKSlwY3PQisjjZl6HYKtAX-FSXZG-j
+url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html
 
 [changagoidemdep.vn]
 match = -12.5%%
