--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-08 19:24:54
+lastsearch = 2024-08-08 20:55:09
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOopEpwb0TGe0J8KBOoVzXsWphcbq-ev3vnl9fR4WSfnWmpQbaspl
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOoptrxZIkODYPWAfDkD-rd6vkDXNH4G9AwDURMTAekTykG0d4n7n
 
 [www.facebook.com]
-match = -100.0%%
-title = NEM Fashion - 𝑴𝒊𝒙 đ𝒐̂̀ 𝒗𝒐̛́𝒊 𝒂́𝒐 𝒍𝒆𝒏 𝒕𝒓𝒐𝒏𝒈 𝒏𝒈𝒂̀𝒚 ...
-url = https://www.facebook.com/nemfashion.official/posts/𝑴𝒊𝒙-đ𝒐̂̀-𝒗𝒐̛́𝒊-𝒂́𝒐-𝒍𝒆𝒏-𝒕𝒓𝒐𝒏𝒈-𝒏𝒈𝒂̀𝒚-𝒈𝒊𝒐́-𝒎𝒖̀𝒂-𝒗𝒆̂̀-thời-tiết-chuyển-gió-mùa-cũng-/1896608763810349/
+match = -88.9%%
+title = Chuchu Shop - 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀 𝐕𝐈𝐄̂𝐍 𝐌𝐈𝐍𝐈 𝐎̛́𝐓 𝐗𝐈𝐄̂𝐌 ...
+url = https://www.facebook.com/story.php/?story_fbid=883178550515220&id=100064692486421
 
 [thegioinem.com]
 match = -55.6%%
@@ -47,19 +47,19 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -155.6%%
-title = Hướng Dẫn Cách Đánh Cú Ném Biên Siêu Cấp #clashofclans ...
-url = https://www.tiktok.com/@akarigaming66/video/7366906266075106576?lang=en
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOor1p43TNDCbnD1dhUA1Wl2w-jmnckxqaag1trGVmQBc2Os8ldod
 
 [m.facebook.com]
-match = -83.3%%
-title = Ăn gì? Ở đâu? | NEM NƯỚNG NHA TRANG CHỈ...
-url = https://m.facebook.com/groups/hanoiangiodau/posts/1905052076634501/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [emartmall.com.vn]
 match = 0.0%%
