--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-08 19:23:51
+lastsearch = 2024-08-08 21:00:47
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -33.3%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOopkp6lVCxRjkMO_OoxgcJBGQyVPk0ryoEvyp2U55LSx0fs3F_im
 
 [elambo.vn]
 match = -3.7%%
@@ -42,9 +42,9 @@ title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
 
 [demxanh.com]
-match = -44.4%%
-title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html
+match = -11.1%%
+title = [HOT] Top 9 gối nằm mát tốt nhất cho ngày hè
+url = https://demxanh.com/goi-nam-mat-tot-nhat.html?srsltid=AfmBOooaXEkg_7Ns9OJGWx4S7kD6WGsNg0GNzdtLCfimmMGHLqo1a-om
 
 [www.thegioididong.com]
 match = -44.4%%
@@ -179,7 +179,7 @@ url = https://baoquangnam.vn/coi-vang-3137201.html
 [www.diepxuan.com]
 match = 51.9%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOoou1mU7GOOUCDjlwimPkik9I472wLDqQWjllenDOEpBgNj1Sm2-
 
 [demhong.vn]
 match = -22.2%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOootXZl4MTK6QrgJDjZzU_vhTtSV2Nj53W2CsFuNwkwpcBVY1ecd
 
 [metruyen.me]
 match = 33.3%%
