CI images update

--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-08 20:04:46
+lastsearch = 2024-08-08 21:14:42
 
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOooCGuJusDtzgaj6NxbaaLIOcaEQpn2ygvuuxUKvtlUT4xJOKlWG
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
 match = -128.6%%
