--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-08 20:52:23
+lastsearch = 2024-08-08 21:14:23
 
 [burningman.org]
 match = 0.0%%
@@ -82,8 +82,8 @@ title = Bulova Official Site | Bulova
 url = https://www.bulova.com/us/en/
 
 [www.ksat.com]
-match = -57.1%%
-title = KSAT 12
+match = -233.3%%
+title = San Antonio News, Texas News, Sports, Weather from KSAT ...
 url = https://www.ksat.com/
 
 [marijuana-anonymous.org]
@@ -1220,4 +1220,9 @@ url = https://www.wjfw.com/
 match = -200.0%%
 title = Sacramento Best Rafting company - Tubing Rentals in ...
 url = https://raftrentals.com/
+
+[www.fadedbarbershops.com]
+match = -253.3%%
+title = Faded Barbershop: Men's Hair Salon University Hills Denver ...
+url = https://www.fadedbarbershops.com/
 
