--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-08 20:46:57
+lastsearch = 2024-08-08 21:16:28
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOorQBJ7PDbF2aWeaMLE3u9aloHy6UyQSoknqdUWaQAef00QaABqc
 
 [shopee.vn]
 match = -6.7%%
