--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-08 20:43:08
+lastsearch = 2024-08-08 21:19:37
 
 [xoptraisan.info]
 match = -170.6%%
@@ -210,4 +210,9 @@ url = https://thamvinhthuan.com/san-pham/tham-xop-van-go-60-x-60-cm/
 match = -111.8%%
 title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
 url = https://www.pinterest.com/pin/763993524284509692/
+
+[www.forgottenbooks.com]
+match = -188.2%%
+title = D Ct Onary of Organ Stops Gngfisf Anb cteign, Qincient ...
+url = https://www.forgottenbooks.com/en/download/AComprehensiveDictionaryofOrganStops_10300938.pdf
 
