--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-08 16:57:39
+lastsearch = 2024-08-08 21:13:41
 
 [www.lazada.vn]
-match = -193.3%%
-title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
+match = -46.7%%
+title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
 
 [shopee.vn]
-match = 13.3%%
-title = Vỏ gối vuông Dollar 45-45cm
-url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
+match = -86.7%%
+title = Vỏ gối vuông size 45 x 45 ( giá tại xưởng)
+url = https://shopee.vn/Vỏ-gối-vuông-size-45-x-45-(-giá-tại-xưởng)-i.18055727.815675201
 
 [jysk.vn]
 match = -166.7%%
